--- a/style.css
+++ b/style.css
@@ -1,5 +1,44 @@
 .floating-comment{
 	position:absolute;
-	left:50px;
-	top:50px;
+	z-index: 11;
+	display:inline-block !important;
+}
+
+#movie_player{
+	position:relative;
+}
+
+
+.floating-comment.fade-in{
+	animation:fade-in 4s linear;
+}
+.floating-comment.floating-right{
+	animation:floating-right 4s ease-in-out;
+}
+@keyframes fade-in{
+	0%{
+		opacity: 0.7;
+		-ms-transform: scale(0.5,0.5); /* IE 9 */
+	    -webkit-transform: scale(0.5,0.5); /* Safari */
+	    transform: scale(0.5,0.5);
+	}
+	100%{
+		opacity: 1;
+		-ms-transform: scale(1,1); /* IE 9 */
+	    -webkit-transform: scale(1,1); /* Safari */
+	    transform: scale(1,1);
+	}
+}
+
+@keyframes floating-right{
+	from{
+		-ms-transform: translate(0,0); /* IE 9 */
+	   	-webkit-transform: translate(0,0); /* Safari */
+	    transform: translate(0,0);
+	}
+	to{
+			-ms-transform: translate(50px,0); /* IE 9 */
+		   	-webkit-transform: translate(50px,0); /* Safari */
+		    transform: translate(50px,0);
+	}
 }
