--- a/style.css
+++ b/style.css
@@ -2,18 +2,24 @@
 	position:absolute;
 	z-index: 11;
 	display:inline-block !important;
+	text-overflow:cut;
+	white-space: nowrap;
 }
 
-#movie_player{
+#player_api{
 	position:relative;
+	overflow: hidden;
 }
-
 
 .floating-comment.fade-in{
-	animation:fade-in 4s linear;
+	animation:fade-in 5s linear;
 }
 .floating-comment.floating-right{
-	animation:floating-right 4s ease-in-out;
+	animation:floating-right 5s ease-in-out;
+}
+
+.floating-comment.float-to-right-end{
+	animation: float-to-right-end 5s linear;
 }
 @keyframes fade-in{
 	0%{
@@ -40,5 +46,16 @@
 			-ms-transform: translate(50px,0); /* IE 9 */
 		   	-webkit-transform: translate(50px,0); /* Safari */
 		    transform: translate(50px,0);
+	}
+}
+
+
+@keyframes float-to-right-end{
+	from{
+		left:0%;
+
+	}
+	to{
+		left:105%;
 	}
 }
