--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@
 .floating-comment.float-to-right-end{
 	animation: float-to-right-end 5s linear;
 }
+
+.text-comments {
+  background-color: clear;
+}
 @keyframes fade-in{
 	0%{
 		opacity: 0.7;
