--- a/client-app/scss/index.scss
+++ b/client-app/scss/index.scss
@@ -1,27 +1,39 @@
 #realtime-comments-container {
-	z-index: 100;
+	z-index: 10;
 	position: absolute;
+	width: 100%;
+}
+
+.comment-column {
+	width: 30%;
+	max-width: 300px;
+	min-width: 50px;
+	position: absolute;
+	right: 0px;
 }
 
 .comment {
-	position: absolute;
-	left: 0;
+	position: relative;
+	width: 100%;
+	background: rgba(0,0,0,0.6);
+	font-size: 20px;
+	padding: 5px;
 }
 
 .slide-enter {
-  opacity: 0.01;
+	max-height: 0;
 }
 
 .slide-enter.slide-enter-active {
-  opacity: 1;
-  transition: opacity .5s ease-in;
+	max-height: 100px;
+	transition: all 0.5s linear;
 }
 
 .slide-leave {
-  opacity: 1;
+	max-height: 100px;
 }
 
 .slide-leave.slide-leave-active {
-  opacity: 0.01;
-  transition: opacity .5s ease-in;
+	max-height: 0;
+	transition: all 0.5s linear;
 }
