--- a/style.css
+++ b/style.css
@@ -76,3 +76,18 @@
 		left:105%;
 	}
 }
+
+
+
+
+/*Commet box logic*/
+.pic-comments{
+	padding:15px;
+}
+
+.comment-emojis{
+	width:50px;
+	height:50px;
+	display:inline-block;
+	margin:3px;
+}
