--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
+#commentBox{
+  border-radius: 7px;
+  background-color: #FFFFCC;
+  padding-top: 10px;
+  padding-bottom: 25px;
+  width: 670px;
+  margin-bottom: 15px;
+}
+
+.form-control{
+  background-color: #FFFFCC;
+  border-color: #FFFFCC;
+  box-shadow: none;
+}
+
+.text-comments{
+  background-color: #FFFFCC;
+  border-color: #FFFFCC;
+  box-shadow: none;
+}
+
+input{
+  float: left;
+  width: 490px;
+  display: inline-block;
+  height: 40px;
+  font-size: 40px;
+}
+
+
+#submitComments{
+  display: inline-block;
+  width: 90px;
+  height: 40px;
+  float: left;
+  margin-left: 15px;
+}
+
 .floating-comment{
 	position:absolute;
 	z-index: 11;
