--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 #commentBox{
   border-radius: 7px;
   background-color: #FFFFCC;
@@ -7,6 +5,8 @@
   padding-bottom: 25px;
   width: 650px;
   margin-bottom: 15px;
+  height: 120px;
+  
 }
 
 .form-control{
@@ -27,6 +27,7 @@ input{
   display: inline-block;
   height: 40px;
   font-size: 40px;
+  margin-left: 20px;
 }
 
 
@@ -36,14 +37,11 @@ input{
   height: 40px;
   float: left;
   margin-left: 15px;
-}
-
-.floating-comment{
-	position:absolute;
-	z-index: 11;
-	display:inline-block !important;
-	text-overflow:cut;
-	white-space: nowrap;
+  background-color: #00A300;
+  color: white;
+  letter-spacing: 1px;
+  font-weight: 800;
+  font-size: 15px;
 }
 
 .floating-comment.emoji-comment{
